[package]
name = "onetime"
version = "0.1.1"
edition = "2021"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/limpix31/onetime"
keywords = ["onetime", "oneshot", "chan", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "readme.md"
description = "Onetime (aka. oneshot) async spsc channel"

[dependencies]
thiserror = { version = "1" }
event-listener-strategy = { version = "0.5", default-features = false }
pin-project-lite = { version = "0.2" }

[dev-dependencies]
futures-lite = { version = "2" }
smol = { version = "2" }

[features]
default = ["std"]
std = ["event-listener-strategy/std"]

[lints.rust]
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
